my changes are working now

--- a/index.html
+++ b/index.html
@@ -1,2 +1,7 @@
 <p>hello this is my first code that i am making for remote file</p>
 <p>you can add any html or any docfile </p>
+<p>this is main branch</p>
+<p>the changes in main branch would not be seen in other branch that you have created</p>
+
+<p>this is my first_branch</p>
+<p>this is the first branch example</p>
