--- a/index.html
+++ b/index.html
@@ -5,3 +5,4 @@
 
 <p>this is my first_branch</p>
 <p>this is the first branch example</p>
+<p>you have to commit the changes after that only you file will be properly switched in different branches</p>
